<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ayodhya311</string>
    <string name="enterPhoneNumber">Please enter Phone Number</string>
    <string name="enterPassword">Please enter Password</string>
    <string name="notAValidEmail">Not a valid email address</string>
    <string name="notAValidPhoneNumber">Not a valid Phone Number</string>
    <string name="otpSent">OTP sent on the entered Phone Number </string>
    <string name="passwordLength">Password should be more than 8 characters</string>
    <string name="successfullyLoggedIn">Logged In Successfully</string>
    <string name="ContinueGoogle">Continue with Google</string>
    <string name="error_no_network">Please check your network connection</string>
    <string name="Please_Wait">Please wait</string>
    <string name="loginviaMobile">Login via Mobile Number</string>
    <string name="otpVerification">OTP Verification</string>
    <string name="enteredmobilenumber">We will send OTP to your entered mobile number</string>
    <string name="nine_one">+91</string>
    <string name="_1234567890">1234567890</string>
    <string name="send">send</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="verify">Verify</string>
    <string name="resendCode">Resend Code</string>
    <string name="otpverifiedsuccessfully">OTP verified Successfully</string>
    <string name="otpverificationfailed">OTP verification failed</string>
    <string name="wrongOtp">wrong OTP</string>
    <string name="unknownError">Unknown Error try later</string>
    <string name="tooManyAttempt">Too many attempts. Retry later</string>
    <string name="wrongNumber">Invalid Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="_123456789">123456789</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Please Enter Mobile Number\n</string>
    <string name="Login">Login or Signup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verifywithotp">Verify with OTP</string>
    <string name="otp">Enter OTP</string>
    <string name="cid">Your complaint has been registered</string>
    <string name="please_enter_title_or_description">Please enter the issue</string>
    <string name="complaint_register_successfully">Complaint Register Successfully</string>
    <string name="nullstr">null</string>
    <string name="pleasecheckinternet">Please check your internet connection</string>
    <string name="description">Description:</string>
    <string name="date_time">Date/Time:</string>
    <string name="location">Location:</string>
    <string name="title">Title:</string>
    <string name="uploadimage">uploadImage</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="no_complaints">No Complaints</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="take_photo">Take photo</string>
    <string name="cancelled">Cancelled</string>
    <string name="please_wait">Please wait</string>
    <string name="unable_to_register_please_try_again_later">Unable to register please try again later</string>
    <string name="Please_Wait_we_are_submitting_your_complaint">Please wait\nwe are submitting your complaint</string>
    <string name="edit">Edit</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="we_sent_you_the_otp_at_this_number">We sent you the OTP at this number:</string>
    <string name="likes">likes</string>
    <string name="_585">585</string>
    <string name="applogo">applogo\n</string>
    <string name="please_wait_we_are_fetching_your_data">please wait we are fetching your data…</string>
    <string name="comments">Comments</string>
    <string name="search_by_location">Search By Location</string>
    <string name="active">Active</string>
    <string name="resolved">Resolved</string>
    <string name="rejected">Rejected</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="username">UserName</string>
    <string name="status">Status</string>
    <string name="_15aug2023">15Aug2023</string>
    <string name="home">Home</string>
    <string name="complaints">Complaints</string>
    <string name="let_s_make_a_difference">Let\'s Make a Difference</string>
    <string name="welcome_to_our_complaint_portal">Welcome To Our Complaint Portal!</string>
    <string name="register_now">Register Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="_995380399">995380399</string>
    <string name="send_otp">Send OTP</string>
    <string name="_91995380399">+91995380399</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up"><u> Sign up </u></string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="phone_number_enter">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="_0000_0000_0000">0000 0000 0000</string>
    <string name="i_agree_with_all_the_term_conditions_of_ayodhya311_app"><![CDATA[I agree with all the Term & Conditions of Ayodhya311 app.]]></string>
    <string name="sign_up_button">Sign Up</string>
    <string name="_91_99953_80399">+91 99953 80399</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="an_6_digit_code_has_been_sent_to_91_9995380399">An 6 digit code has been sent to</string>
    <string name="_91_9995380399">+91 9995380399</string>
    <string name="enter_otp1">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="adda_complaint">Adda Complaint</string>
    <string name="add_a_complaint">Add a Complaint</string>
    <string name="please_fill_the_form_below_to_register_a_complaint">Please fill the form below to register a complaint</string>
    <string name="date_time1">Date/Time</string>
    <string name="eg_eagle_street_chicago_illinois">Eg Eagle Street,Chicago,Illinois</string>
    <string name="issue">Issue</string>
    <string name="please_enter_your_issue">Please Enter your issue</string>
    <string name="describe_your_issue_in_detail">Describe your issue in detail</string>
    <string name="click_to_add_photos">Click to add photos</string>
    <string name="i_hereby_acknowledge_that_information_provided_above_is_best_to_my_knowledge_at_the_time">I hereby acknowledge that information provided above is best to my knowledge at the time.</string>
    <string name="plus">+</string>
    <string name="notifications">notifications</string>
    <string name="ayodhya_311">Ayodhya 311</string>
    <string name="_05">05</string>
    <string name="active_complaints">Active Complaints</string>
    <string name="_03">03</string>
    <string name="resolved_complaints">Resolved Complaints</string>
    <string name="my_city">My City</string>
    <string name="july_11_2023">July 11 2023</string>
    <string name="heavens_on_rise_city_flooded_with_rain_water">Heavens on rise: City flooded with rain water</string>
    <string name="view_all">View All</string>
    <string name="my_area_s_complaints">My Area\'s Complaints</string>
    <string name="pothole">Pothole</string>
    <string name="muncipal_corporation">Muncipal Corporation</string>
    <string name="july_13_2023_02_53_pm">July 13, 2023 | 02:53 PM</string>
    <string name="the_repercussions_of_the_garbage_problem_are_far_reac_hing_concerns_something_ales_more">The repercussions of the garbage problem are far-reac hing concerns something ales...more</string>
    <string name="in_progress">In-Progress</string>
    <string name="_10">10</string>
    <string name="upvotes">Upvotes</string>
    <string name="downvote">DownVote</string>
    <string name="downvotes">Downvote</string>
    <string name="_0">0</string>
    <string name="ayodhya311">Ayodhya311</string>
    <string name="welcome_to_our_complaint_portal_n_register_now">Welcome to our Complaint Portal! \n Register Now</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="sign_up_home"><u>Sign up</u></string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="notification">Notifications</string>
    <string name="notificationss">Notification</string>
    <string name="today">Today</string>
    <string name="your_complaint_pothole_has_been_resolved">Your Complaint Pothole has been resolved.</string>
    <string name="_30_min_ago">30 min ago</string>
    <string name="earlier">Earlier</string>
    <string name="your_complaint_pothole_is_currently_in_progress">Your Complaint Pothole is currently in-progress.</string>
    <string name="_1_days_ago">1 days ago</string>
    <string name="notificationsProfile">Notifications</string>
    <string name="your_complaint_pothole_has_been_rejected_due_to_invalid_content_please_contact_us_for_further_assistance">Your Complaint Pothole has been Rejected due to \n invalid content. Please contact us for further \n assistance.</string>
    <string name="your_complaint_pothole_has_been_accepted_as_per_your_request">Your Complaint Pothole has been Accepted as per \n your request.</string>
    <string name="your_complaint_pothole_has_been_successfully_submitted">Your complaint Pothole has been successfully Submitted.</string>
    <string name="_4_days_ago">4 days ago</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="my_complaints">My Complaints</string>
    <string name="details">Details</string>
    <string name="_90_eagle_street_society_sec_28c_chd">90, Eagle street society, sec 28c, Chd</string>
    <string name="the_repercussions_of_the_garbage_problem_are_far_reaching_and_extend_beyond_aesthetic_concerns_the_stagnant_waste_attracts_pests_and_vermin_leading_to_an_increase_in_disease_transmission">The repercussions of the garbage problem are far-reaching and extend beyond aesthetic concerns. The stagnant waste attracts pests and vermin, leading to an increase. In disease transmission.</string>
    <string name="my_area_s_complaints_add">My Area\'s Complaints</string>
    <string name="_911">+91</string>
    <string name="_99953_80399">99953 80399</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login </u></string>
    <string name="my_city11">My City</string>
    <string name="please_acknowlegdge">Please acknowledge the given information is correct</string>
    <string name="municipal_corporation">Municipal Corporation</string>
    <string name="_91_">+91</string>
    <string name="please_enter_email">Email address can be blank</string>
    <string name="invalidEmail">Not a valid email address</string>
    <string name="blank_phoneNumber">Phone number can not be blank</string>
    <string name="blank_aadhar">Aadhar card number can not be blank</string>
    <string name="agree_terms_conditions">Please agree terms and conditions</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_user_name">User Name can not be blank</string>
    <string name="user_created">User created successfully</string>
    <string name="package_name">Package:</string>
    <string name="imageType">image/*</string>
    <string name="issue_logger">com.ucopdesoft.issuelogger</string>
    <string name="_91__">+91</string>
</resources>