<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".fragments.SigningUpFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/layoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost"
                    android:gravity="center"
                    android:text="@string/let_s_make_a_difference"
                    android:textAppearance="@style/let_s_make_"
                    android:textFontWeight="700" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/welcome_to_our_complaint_portal"
                    android:textAppearance="@style/welcome_to_"
                    android:textColor="@color/black"
                    app:fontFamily="@font/lato" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/register_now"
                    android:textAppearance="@style/welcome_to_" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/jost"
                    android:gravity="top"
                    android:text="@string/email_address"
                    android:textColor="#434343"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/textview_shape"
                    android:fontFamily="@font/jost"
                    android:hint="@string/enter_email_address"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:paddingStart="15dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="14dp"
                    android:textColor="#9D9D9D"
                    android:textSize="15sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/jost"
                    android:gravity="top"
                    android:text="@string/phone_number_enter"
                    android:textColor="#434343"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/textview_shape"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/textbox_background_phone"
                        android:fontFamily="@font/jost"
                        android:gravity="center"
                        android:text="@string/_91__"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/textbox_background_phone"
                        android:fontFamily="@font/jost"
                        android:hint="@string/enter_your_phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:paddingVertical="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="14dp"
                        android:textColor="#9D9D9D"
                        android:textSize="15sp"
                        app:boxStrokeColor="#FFF"
                        app:boxStrokeWidthFocused="0dp" />

                </LinearLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/jost"
                    android:gravity="top"
                    android:text="@string/aadhar_number"
                    android:textColor="#434343"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/textview_shape"
                    android:fontFamily="@font/jost"
                    android:hint="@string/_0000_0000_0000"
                    android:inputType="number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:paddingStart="15dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="14dp"
                    android:textColor="#9D9D9D"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="21dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:theme="@style/radioButton" />


                    <TextView
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/jost"
                        android:letterSpacing="0.01"
                        android:padding="2dp"
                        android:text="@string/i_agree_with_all_the_term_conditions_of_ayodhya311_app"
                        android:textColor="#434343"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="37dp"
                    android:background="@drawable/backgroud_button"
                    android:backgroundTint="#4B7BE5"
                    android:fontFamily="@font/jost"
                    android:gravity="center"
                    android:text="@string/sign_up_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jost"
                        android:letterSpacing="0.01"
                        android:text="@string/already_have_an_account"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:fontFamily="@font/jost"
                        android:letterSpacing="0.01"
                        android:text="@string/login"
                        android:textColor="#4B7BE5"
                        android:textSize="17sp" />


                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>