<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="12dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/white_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/takePhotoBtn"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7dp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:text="@string/take_photo"
        android:textColor="#4B7BE5"
        android:fontFamily="@font/jost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseFromGalleryBtn"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:textAllCaps="false"
        android:fontFamily="@font/jost"
        android:background="@drawable/button_background"
        android:text="@string/choose_from_gallery"
        android:textColor="#4B7BE5"
        app:strokeColor="@color/app_default"
        app:strokeWidth="2dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:background="@drawable/cancel_button_shape"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:fontFamily="@font/jost"/>

</LinearLayout>
</androidx.cardview.widget.CardView>